@@ -42,7 +42,7 @@
                         <li>(A): active.</li>
                         <li>(P): periodically active (can be sporadic or for specific regular time periods).</li>
                         <li>(D): dormant; inactive but with the intent of becoming active in the future.</li>
-                        <li>(I): inactive for the forseeable future.</li>
+                        <li>(I): inactive for the foreseeable future.</li>
                     </ul><p>If an account does not appear in this list, that does not <i>necessarily</i> mean it is not mine, but you should check before assuming so.
                     </p>
                 </div>
@@ -82,9 +82,6 @@
                         <a id="mastodon" onclick="toggle_account(this)">Mastodon</a>
                     </li>
                     <li class="entry">
-                        <a id="movellas" onclick="toggle_account(this)">Movellas</a>
-                    </li>
-                    <li class="entry">
                         <a id="mozilla" onclick="toggle_account(this)">Mozilla Addons</a>
                     </li>
                     <li class="entry">
@@ -98,6 +95,9 @@
                     </li>
                     <li class="entry">
                         <a id="reddit" onclick="toggle_account(this)">Reddit</a>
+                    </li>
+                    <li class="entry">
+                        <a id="royalroad" onclick="toggle_account(this)">RoyalRoad</a>
                     </li>
                     <li class="entry">
                         <a id="steam" onclick="toggle_account(this)">Steam</a>
