@@ -59,7 +59,7 @@
                                 >
                         </a>Transcribing? What's that? Transcribing is accessibility, is what it is! This is something I spend a good portion of my time doing, and I've met many wonderful people doing it too, so it's very close to my heart. But what is it really? It's not your normal transcribing initiative, such as a large library organising an effort to transcribe old documents; no, at the moment it's something quite a lot smaller.
 
-                        I'd like to introduce you to the <a href="https://grafeas.org/">Grafeas Group</a> (logo right), a small 501(c)(3) non-profit organisation that runs <a href="https://www.reddit.com/r/TranscribersOfReddit">r/TranscribersOfReddit</a>, an accessibility initiative to transcribe audio, image and video posts on Reddit for the benefit of people who would not normally have access to them. This lack of access can be due to visual or hearing impairents, slow internet, inconsistency of rendering across Reddit's various official and third-party clients, and more. To help these people, the posts are transcribed into the comments, where they can be accessed either by simply reading, or where necessary, by assisstive technology such as screen readers.
+                        I'd like to introduce you to the <a href="https://grafeas.org/">Grafeas Group</a> (logo right), a small 501(c)(3) non-profit organisation that runs <a href="https://www.reddit.com/r/TranscribersOfReddit">r/TranscribersOfReddit</a>, an accessibility initiative to transcribe audio, image and video posts on Reddit for the benefit of people who would not normally have access to them. This lack of access can be due to visual or hearing impairments, slow internet, inconsistency of rendering across Reddit's various official and third-party clients, and more. To help these people, the posts are transcribed into the comments, where they can be accessed either by simply reading, or where necessary, by assistive technology such as screen readers.
 
                         I've been transcribing with the Grafeas Group for over a year as of July 2021, and helping moderate the subreddit since February 2021. I've even used a few transcriptions myself in the past when the contrast between the text and the background of images didn't suit my colour vision (I have <a href="https://en.wikipedia.org/wiki/Color_blindness#Protanomaly">protanomaly</a>). I could talk for hours about transcribing and the Grafeas Group, but it's probably already sounding like an advert. Biased as I may be, I do genuinely believe they're one of the best communities on the internet!
                         </p>
