@@ -32,7 +32,7 @@
 
                         The Content on the Website falls under a variety of licenses, as detailed in the licensing section on the right of this page.
 
-                        The Website may store cookies for the purpose of theme and font selection. Cookies are only created and stored upon changing theme or font. All cookies last 24 hours. No personal data is collected or stored by the Website.
+                        The Website may store cookies for the purpose of theme and font selection. If cookies are accepted, a cookie will be stored to remember that setting; cookies thereafter are only created and stored upon changing theme or font. All cookies last 24 hours. No personal data is collected or stored by the Website.
                         </p>
                     </div>
                     <div class="text-column">
@@ -43,7 +43,7 @@
 
                         The rights to content created by Murdo Maclachlan that is not related to the code, styling or design of this website are fully withheld to Murdo Maclachlan with no exceptions. Examples of such content include but are not necessarily limited to: the written text of this website, and any content created by Murdo Maclachlan that has been embedded from other websites.
 
-                        The rights to any content not created by Murdo Maclachlan, such as the logo of the <a href="https://grafeas.org">Grafeas Group</a>, are fully withheld to their respective owners.
+                        The rights to any content not created by Murdo Maclachlan, such as the logo of the <a href="https://grafeas.org">Grafeas Group</a>, are fully withheld to their respective owners. The Grafeas Group logo is used with permission from the Grafeas Group.
                         </p>
                     </div>
                 </div>
