@@ -51,7 +51,7 @@
                     </div>
                     <div class="text-column">
                         <a class="hlink" href="writing/poetry"><h2 id="poetry">Poetry</h2></a>
-                        <p>Poetry, despite being secondary in my interests, is actaully both the first writing I ever did and the only writing where I have published work.
+                        <p>Poetry, despite being secondary in my interests, is actually both the first writing I ever did and the only writing where I have published work.
 
                         My early poems are, frankly, rubbish, but since joining <a href="https://allpoetry.com/Murdo_Maclachlan">AllPoetry.com</a>, I gained a new love and passion for the art and have since improved a lot. Here's an excerpt from one of my favourites:
                         </p>
